optimize show authorize token in api doc
